--- a/src/css/_normalize.scss
+++ b/src/css/_normalize.scss
@@ -1,2 +1,3 @@
-@import url(./normalize/_normalize-mixin.scss);
-@import url(./normalize/_vertical-rhythm.scss);
+@import './normalize/_normalize-mixin.scss';
+@import './normalize/_vertical-rhythm.scss';
+@import './normalize/_variables.scss';
