--- a/src/css/blocks/gameOver.scss
+++ b/src/css/blocks/gameOver.scss
@@ -13,6 +13,8 @@
 
   &-btn {
     padding-top: 15vh;
+    opacity: 0;
+    transition: 2s ease-in-out;
 
     button {
       @include text-style-vt(22px, 24px);
