--- a/src/css/blocks/endPage.scss
+++ b/src/css/blocks/endPage.scss
@@ -48,6 +48,14 @@
     padding-top: 10vh;
     opacity: 0;
     transition: opacity 5s ease-in-out;
+    &__text {
+      display: inline-block;
+      position: absolute;
+      top: 50%;
+      left: 40%;
+      color: black;
+      font-size: 28px;
+    }
   }
 
   @media (min-width: $screen-sml) and (max-width: $screen-sm-max){
@@ -68,10 +76,12 @@
   @media (min-width: $screen-md-max) {
     .winner {
     }
-    &-gif img{
+    &-gif {
+      img{
       width: 30vw;
       height: 30vh;
     }
+  }
   }
 
   @media (min-width: $screen-2k) {
