--- a/src/css/blocks/endPage.scss
+++ b/src/css/blocks/endPage.scss
@@ -48,6 +48,7 @@
     padding-top: 10vh;
     opacity: 0;
     transition: opacity 5s ease-in-out;
+    position: relative;
     &__text {
       display: inline-block;
       position: absolute;
@@ -55,6 +56,10 @@
       left: 40%;
       color: black;
       font-size: 28px;
+
+      @media(min-width: 1280px) {
+        left: 48%;
+      }
     }
   }
 
