--- a/src/css/blocks/startPage.scss
+++ b/src/css/blocks/startPage.scss
@@ -257,6 +257,14 @@
         margin: 0 auto;
         justify-content: space-around;
 
+        &__q {
+          &-telegram {
+            max-width: 44px !important;
+            max-height: 44px !important;
+          }
+        }
+
+
           img {
             width: 50px;
             height: 50px;
